Name:                   cquery
Version:                0.0.0.1
Synopsis:               Print information from cabal file.
Description:            Print dependent packages and module information from
                        cabal file.
                        .
                        Example: to print the package dependencies prefixed by
                        '+', which is useful when creating hoogle binary
                        databases:
                        .
                        cquery depends --prefix='+' my.cabal
                        .
Homepage:               https://github.com/markwright/cquery
License:                BSD3
License-file:           LICENSE
Author:                 Mark Wright
Maintainer:             markwright@internode.on.net
Copyright:              Copyright (c) Mark Wright 2011. All rights reserved.
Category:               Distribution
Build-type:             Simple
Cabal-version:          >=1.10.1
source-repository       head
  type:                 git
  location:             git://github.com/markwright/cquery.git

Executable cquery
  default-language:     Haskell2010
  Main-is:              Main.hs
  Build-depends:        base >= 4 && < 5,
                        Cabal,
                        cmdargs >= 0.9,
                        MissingH >= 1.1.1.0,
                        process,
                        regex-tdfa
  Ghc-Options: -Wall
